Add translator's target:en

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -127,6 +127,10 @@
    	"youdao",
    	"haici"
    ],
+   "translator.toLang": [
+	   "en",
+	   "zh_CN"
+   ],
 
   "codeLens.enable": true,
   "coc.preferences.formatOnType": true,
