nothing useful changed

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -48,7 +48,7 @@
   },
   /*
    * ===
-   * ==== python config
+   * ==== coc-python
    * ===
    */
   "python.pythonPath": "/opt/miniconda3/bin/python",
