--- a/coc-settings.json
+++ b/coc-settings.json
@@ -68,10 +68,7 @@
 	"json.format.enable": true,
 
 	"python.formatting.provider": "yapf",
-	"python.formatting.yapfArgs": [
-		"--style",
-		"{SPACES_AROUND_POWER_OPERATOR: True, SPACES_BEFORE_COMMENT: 1}"
-	],
+	"python.formatting.yapfArgs": ["--style", "{SPACES_AROUND_POWER_OPERATOR: True, SPACES_BEFORE_COMMENT: 1}"],
 
 	"typescript.suggestionActions.enabled": true,
 	"typescript.format.enabled": true,
@@ -189,6 +186,8 @@
 	"prettier.singleQuote": false,
 	"prettier.useTabs": true,
 	"prettier.tabWidth": 4,
+	"prettier.jsxBracketSameLine": true,
+
 	"coc.preferences.formatOnType": true,
 	"coc.preferences.formatOnSaveFiletypes": [
 		"c",
